fixed Announcements and Trending margin on smaller screens

--- a/style.css
+++ b/style.css
@@ -484,6 +484,16 @@ font-size: 17px;
 {
   font-size: 20px;
 }
+
+.announcements-content {
+  margin-left: 0;
+  margin-right: 20px;
+}
+
+.trending-content {
+  margin-left: 0;
+  margin-right: 20px;
+}
 }
 
 @media only screen and (max-width: 1080px) {
